--- a/machlearning.Rmd
+++ b/machlearning.Rmd
@@ -7,8 +7,6 @@ output:
     fig_caption: yes
     fig_height: 6
     fig_width: 9
-  pdf_document:
-    fig_caption: yes
 ---
 
 ###*EXECUTIVE SUMMARY*
@@ -24,13 +22,13 @@ To address this problem, I propose the following:
 
 The data ([Train Set](https://d396qusza40orc.cloudfront.net/predmachlearn/pml-training.csv) and [Test Set](https://d396qusza40orc.cloudfront.net/predmachlearn/pml-testing.csv)) were collected from accelerometers on the belt, forearm, arm, and dumbell of 6 participants. 
 
-```{r, echo=FALSE, results='hide'}
+```{r, echo=FALSE, results='hide', warning=FALSE}
 training = read.csv("~/Desktop/weisdata-home/machinelearning/pml-training.csv")
 testing = read.csv("~/Desktop/weisdata-home/machinelearning/pml-testing.csv")
 head(training)
 ```
 
-```{r, echo=FALSE, results='hide'}
+```{r, echo=FALSE, results='hide', warning=FALSE}
 summary(training)
 training <- training[,-c(12:36,50:59,69:83,87:101,103:112,125:139,141:150)]
 testing <- testing[,-c(12:36,50:59,69:83,87:101,103:112,125:139,141:150)]
@@ -95,7 +93,7 @@ As such, it is resonable to delete these useless variables. By now, the dimensio
 
 In this part, I first slice the original training set into `trainS` and `testS` sets for model building and accuracy validation. Then it is time to build models.
 
-```{r, results='hide', tidy=TRUE}
+```{r, results='hide', tidy=TRUE, warning=FALSE}
 set.seed(1010)
 inTrain <- createDataPartition(y=training$classe, p=0.60, list=FALSE)
 trainS <- training[inTrain,]
@@ -105,7 +103,7 @@ dim(trainS)
 
 I conduct three classification algorithems to learning, decision tree, bagging and random forest. The models statistics comparision is shown in  Table \ref{tab:mod_comparison}. From the comparison, we can find the ideal model is the random forest, with a rather high accuracy rate of 99.92%.
 
-```{r, results='hide', tidy=TRUE}
+```{r, results='hide', tidy=TRUE, warning=FALSE}
 # Decision tree
 library(caret)
 set.seed(10)
@@ -123,7 +121,7 @@ set.seed(10101010)
 modrf <- randomForest(classe ~. , data=trainS, importance=T)
 ```
 
-```{r, echo=FALSE, tidy=TRUE, results='hide'}
+```{r, echo=FALSE, tidy=TRUE, results='hide', warning=FALSE}
 pred_rpart <- predict(modfit_rpart, testS[,-57])
 cm_rpart <- confusionMatrix(pred_rpart, testS[,57])$overall
 pred_bag <- predict(modfit_bag, testS[,-57])
@@ -149,7 +147,7 @@ names(mod_comparison) <- c("Model", "Accuracy", "95% CI", "No Info Rate",
 
 ```
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, warning=FALSE}
 panderOptions('round', 4)
 pander(mod_comparison, caption="Models Overall Statistics Comparison\\label{tab:mod_comparison}")
 ```
@@ -162,21 +160,21 @@ Specifically, in these models, there is no need for cross-validation or a separa
 
 Based on the random forest model, furthermore, I dig into the features to refine the model. Figure \ref{fig:varimp} reveals the top important variables, which is a clue for further features reduction. Therefore, I pick up the top 25 most important variable to conduct a new random forest model. 
 
-```{r, varImp, fig.cap="Variable Importance Plot\\label{fig:varimp}", echo=FALSE}
+```{r, varImp, fig.cap="Variable Importance Plot\\label{fig:varimp}", echo=FALSE, warning=FALSE}
 varImp <- importance(modrf)
 varImpPlot(modrf, type=1, main="Variable Importance Plot",cex = 0.9)
 ```
 
 The model reaches a even high accuracy rate of 99.96% and a low Out of Sample(OOB) error estimate of 0.11%. From Figure \ref{fig:oobplot}, we can find that the OOB errors are decreasing as the number of trees increases. 
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, warning=FALSE}
 varImp25 <- names(sort(varImp[,6], decreasing=T))[1:25]
 set.seed(1010101010)
 modrf_varImp25 <- randomForest(classe ~. , data=trainS[,c(varImp25, "classe")], importance=T)
 modrf_varImp25
 ```
 
-```{r, OOBPlot, fig.cap="Out-of-bag (OOB) Error Estimate\\label{fig:oobplot}", echo=FALSE}
+```{r, OOBPlot, fig.cap="Out-of-bag (OOB) Error Estimate\\label{fig:oobplot}", echo=FALSE, warning=FALSE}
 plot(modrf_varImp25, main ="Out-of-bag (OOB) error estimate")
 legend("topright", colnames(modrf$err.rate),col=1:6,cex=0.8,fill=1:6)
 ```
@@ -184,7 +182,7 @@ legend("topright", colnames(modrf$err.rate),col=1:6,cex=0.8,fill=1:6)
 ###Prediction
 Sum up, the final model is the random forest with the selected 25 predictors. 
 The final part of this project is to predict the given 20 observations in the test set. 
-```{r, echo=FALSE}
+```{r, echo=FALSE, warning=FALSE}
 predrf_test_varImp25 <- predict(modrf_varImp25, testing[,varImp25], type = "class")
 predrf_test_varImp25
 ```
